# learnopengl

./: .gitignore  .gitmodules
camera/: CMakeLists.txt
camera/src/: camera_with_controller.cpp  complete_camera.cpp  keyboard_camera.cpp  rotated_camera.cpp
cmake/: after_exe.cmake  packages.cmake
coordinate_systems/: CMakeLists.txt
coordinate_systems/src/: cube.cpp  plane.cpp  ten_cubes.cpp
hello_triangle/: CMakeLists.txt
hello_triangle/src/: rectangle.cpp  triangle.cpp
hello_window/: CMakeLists.txt
hello_window/src/: main.cpp
include/: buffer.hpp  camera.hpp  context.hpp  error.hpp  frame_buffer.hpp  mesh.hpp  model.hpp  program.hpp  render_buffer.hpp  texture.hpp
sections/advanced_GLSL/: CMakeLists.txt
sections/advanced_GLSL/src/: uniform_buffer.cpp
sections/basic_lighting/: CMakeLists.txt
sections/basic_lighting/shader/: diffuse_lighting.fs  diffuse_lighting.vs  specular_lighting.fs
sections/basic_lighting/src/: ambient_lighting.cpp  diffuse_lighting.cpp  specular_lighting.cpp
sections/blending/: CMakeLists.txt
sections/blending/shader/: grass.fs
sections/blending/src/: grass.cpp  window.cpp
sections/camera/: CMakeLists.txt
sections/camera/src/: camera_with_controller.cpp  rotated_camera.cpp
sections/colors/: CMakeLists.txt
sections/colors/src/: lighting_scene.cpp
sections/coordinate_systems/: CMakeLists.txt
sections/coordinate_systems/src/: cube.cpp  plane.cpp  ten_cubes.cpp
sections/cubemaps/: CMakeLists.txt
sections/cubemaps/shader/: cube.fs  refraction.fs
sections/cubemaps/src/: reflection.cpp  refraction.cpp  skybox.cpp
sections/depth_testing/: CMakeLists.txt
sections/depth_testing/shader/: depth_buffer.fs
sections/depth_testing/src/: depth_buffer.cpp  depth_testing.cpp  depth_testing_view.cpp
sections/face_culling/: CMakeLists.txt
sections/face_culling/shader/: cube.fs
sections/face_culling/src/: cube.cpp
sections/framebuffers/: CMakeLists.txt
sections/framebuffers/shader/: blur.fs  edge.fs  scene.vs  sharpen.fs
sections/framebuffers/src/: blur.cpp  edge.cpp  frame_buffer.cpp  grayscale.cpp  inversion.cpp  sharpen.cpp
sections/hello_triangle/: CMakeLists.txt
sections/hello_triangle/src/: rectangle.cpp  triangle.cpp
sections/hello_window/: CMakeLists.txt
sections/hello_window/src/: window.cpp
sections/light_casters/: CMakeLists.txt
sections/light_casters/shader/: directional_light.fs  point_light.fs  spotlight.fs  spotlight_smooth_edge.fs
sections/light_casters/src/: directional_light.cpp  point_light.cpp  point_lights.cpp  spotlight.cpp  spotlight_smooth_edge.cpp
sections/lighting_maps/: CMakeLists.txt
sections/lighting_maps/shader/: diffuse_map.fs  specular_map.fs
sections/lighting_maps/src/: diffuse_map.cpp  specular_map.cpp
sections/materials/: CMakeLists.txt
sections/materials/shader/: lamp.vs  material.fs  material.vs
sections/materials/src/: material.cpp
sections/model/: CMakeLists.txt
sections/model/shader/: model.vs
sections/model/src/: model.cpp
sections/multiple_lights/: CMakeLists.txt
sections/multiple_lights/shader/: material.vs  multiple_lights.fs
sections/multiple_lights/src/: multiple_lights.cpp
sections/shaders/: CMakeLists.txt
sections/shaders/src/: color_attribute.cpp  uniform.cpp
sections/stencil_testing/: CMakeLists.txt
sections/stencil_testing/src/: outlining.cpp
sections/textures/: CMakeLists.txt
sections/textures/src/: mix_textures.cpp  texture.cpp
sections/transformations/: CMakeLists.txt
sections/transformations/src/: rotation.cpp
shaders/: CMakeLists.txt
shaders/src/: color_attribute.cpp  uniform.cpp
textures/: CMakeLists.txt
textures/src/: mix_textures.cpp  texture.cpp
transformations/: CMakeLists.txt
transformations/src/: rotation.cpp
