CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(hello_triangle)

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/all.cmake)

SET(SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
FILE(GLOB SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

ADD_EXECUTABLE(triangle ${SOURCES})

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(glfw3 REQUIRED)

TARGET_LINK_LIBRARIES(triangle PRIVATE OpenGL::GL glfw)
