CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(hello_window)

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/all.cmake)

SET(SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)

ADD_EXECUTABLE(window ${SOURCES})

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(glfw3 REQUIRED)

TARGET_LINK_LIBRARIES(window PRIVATE OpenGL::GL glfw)
